--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -41,7 +41,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="header-right float-right">
                                 <div class="header-btn">
-                                    <a href="{{ url_for('user.user_page', user_id=user.user_id) }}" class="btn btn-main btn-small">
+                                    <a href="{{ url_for('user.user_page', usr_id=current_user.usr_id) }}" class="btn btn-main btn-small">
                                         <i class="fa fa-user ml-1"></i> View Profile
                                     </a>
                                 </div>
