--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -72,15 +72,10 @@
                                     </a>
                                 </li>
                                 <li class="nav-item ">
-                                    <a href="{{ url_for('arm_num_checker.contact_page') }}" class="nav-link active">
+                                    <a href="{{ url_for('arm_num_checker.contact_page', usr_id=current_user.usr_id) }}" class="nav-link active">
                                         Contact Us / Submit Feedback
                                     </a>
                                 </li>
-                                <!-- <li class="nav-item ">
-                                    <a href="{{ url_for('arm_num_checker.results_page') }}" class="nav-link">
-                                        Results
-                                    </a>
-                                </li> -->
                                 <a href="{{ url_for('auth.logout') }}" class="btn btn-small" id="logout">
                                     <i class="fa fa-sign-out-alt mr-2"></i>
                                     Logout
@@ -159,7 +154,8 @@
 
                         <div class="col-lg-8">
                             <!-- form -->
-                            <form class="contact__form form-row " method="POST" action="{{ url_for('arm_num_checker.contact_page') }}" id="contactForm">
+                            <form class="contact__form form-row " method="POST" action="{{ url_for('arm_num_checker.contact_page', usr_id=current_user.usr_id) }}" id="contactForm">
+                                {% include "partials/_alert.html" %}
                                 <div class="row">
                                     <div class="col-12">
                                         <div class="alert alert-success contact__msg" style="display: none" role="alert">
@@ -171,31 +167,32 @@
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
-                                            <input type="text" id="name" name="name" class="form-control" placeholder="Your Name">
+                                            {{ form.name.label }} {{ form.name(size=32) }}
                                         </div>
                                     </div>
                                     
                                     <div class="col-lg-6">
                                         <div class="form-group">
-                                            <input type="text" name="email" id="email" class="form-control" placeholder="Email Address">
+                                            {{ form.email.label }} {{ form.email(size=32) }}
                                         </div>
                                     </div>
+
                                     <div class="col-lg-12">
                                         <div class="form-group">
-                                            <input type="text" name="subject" id="subject" class="form-control" placeholder="Subject">
+                                            {{ form.subject.label }} {{ form.subject(size=32) }}
                                         </div>
                                     </div>
                                     
                                     <div class="col-lg-12">
                                         <div class="form-group">
-                                            <textarea id="message" name="message" cols="30" rows="6" class="form-control" placeholder="Your Message"></textarea>    
+                                            {{ form.message.label }} {{ form.message(rows=6, cols=50) }}
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="col-lg-12">
                                     <div class="mt-4 text-right">
-                                        <button class="btn btn-main" type="submit">Submit Feedback <i class="fa fa-angle-right ml-2"></i></button>
+                                        {{ form.submit() }}
                                     </div>
                                 </div>
                             </form> 
@@ -256,7 +253,7 @@
         </section>
         <!-- Footer end -->
         <div class="fixed-btm-top">
-            <a href="{{ url_for('arm_num_checker.contact_page') }}#top-header" class="js-scroll-trigger scroll-to-top"><i class="fa fa-angle-up"></i></a>
+            <a href="{{ url_for('arm_num_checker.contact_page', usr_id=current_user.usr_id) }}#top-header" class="js-scroll-trigger scroll-to-top"><i class="fa fa-angle-up"></i></a>
         </div>
 
          <!--Essential Scripts -->
