--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -72,15 +72,10 @@
                                     </a>
                                 </li>
                                 <li class="nav-item ">
-                                    <a href="{{ url_for('arm_num_checker.contact_page') }}" class="nav-link">
+                                    <a href="{{ url_for('arm_num_checker.contact_page', usr_id=current_user.usr_id) }}" class="nav-link">
                                         Contact Us / Submit Feedback
                                     </a>
                                 </li>
-                                <!-- <li class="nav-item ">
-                                    <a href="{{ url_for('arm_num_checker.results_page') }}" class="nav-link">
-                                        Results
-                                    </a>
-                                </li> -->
                                 <a href="{{ url_for('auth.logout') }}" class="btn btn-small" id="logout">
                                     <i class="fa fa-sign-out-alt mr-2"></i>
                                     Logout
@@ -141,7 +136,6 @@
                                         </div>
                                     </div>
                                 </div>
-
                                 <div class="col-lg-4 mt-3">
                                     <div class=" mt-2 text-right">
                                         <button class="btn btn-danger btn-clear" type="reset">
@@ -156,7 +150,6 @@
                                         </button>
                                     </div>
                                 </div>
-                                 
                             </div>    
                         </form> 
                         <!-- /form -->
@@ -168,7 +161,7 @@
                                     <label for="check_particular_num">Check Number:</label>
                                     <input type="number" id="check_particular_num" name="check_particular_num" class="form-control" placeholder="Enter Value" required="">
                                     <div class="mt-2 text-right">
-                                        <button class="btn btn-danger btn-clear" id="reset_check_particular_num">
+                                        <button class="btn btn-danger btn-clear" id="reset_check_particular_num" type="reset">
                                             Clear Input<i class="fa fa-trash ml-2"></i>
                                         </button>
                                     </div>
@@ -177,7 +170,6 @@
                                             Check Number
                                         </button>
                                     </div>
-
                                 </div>
                             </div>   
                         </form>
