--- a/app/templates/profile/edit.html
+++ b/app/templates/profile/edit.html
@@ -63,7 +63,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item ">
-                                    <a href="{{ url_for('arm_num_checker.contact_page') }}" class="nav-link">
+                                    <a href="{{ url_for('arm_num_checker.contact_page', usr_id=current_user.usr_id) }}" class="nav-link">
                                         Contact Us / Submit Feedback
                                     </a>
                                 </li>
