--- a/app/templates/partials/_alert.html
+++ b/app/templates/partials/_alert.html
@@ -1,5 +1,5 @@
 {% set alerts = get_flashed_messages(with_categories=true) %}
-<!-- {{ alerts }} -->
+{{ alerts }}
 <style>
   .alert-container {
     position: fixed;
@@ -18,17 +18,17 @@
     {% for category, message in alerts %} 
       {% if category == 'error' %}
           <div class="alert alert-dismissible text-bg-warning border-0 fade show alert-warning" role="alert">
-            <button type="button" id="closeAlertButton" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+            <button type="button" class="closeAlertButton btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
             {{ message }}
           </div>
         {% elif category == 'success' %}
           <div class="alert alert-dismissible text-bg-success border-0 fade show alert-success" role="alert">
-            <button type="button" id="closeAlertButton" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+            <button type="button" class="closeAlertButton btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
             {{ message }}
           </div> 
         {% elif category == 'danger' %}
           <div class="alert alert-dismissible text-bg-danger border-0 fade show alert-danger" role="alert">
-            <button type="button" id="closeAlertButton" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+            <button type="button" class="closeAlertButton btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
             {{ message }}
           </div>
       {% endif %}
