--- a/app/templates/profile/view.html
+++ b/app/templates/profile/view.html
@@ -25,6 +25,7 @@
 
     <body id="top-header"> 
         <!-- Header Start -->
+        {% include "partials/_alert.html" %}
         <header>
             <div class="header-top">
                 <div class="container">
