--- a/app/templates/profile/view.html
+++ b/app/templates/profile/view.html
@@ -25,6 +25,7 @@
 
     <body id="top-header"> 
         <!-- Header Start -->
+        <!-- {% include "partials/_alert.html" %} -->
         <header>
             <div class="header-top">
                 <div class="container">
@@ -109,7 +110,9 @@
                         <h1>USER DETAILS</h1>
                         <br>
                         <h2>NAME: {{ user.name }}</h2>
+                        <br>
                         <p><strong>EMAIIL: </strong>{{ user.email }}</p>
+                        <br>
                         <p><strong>USERNAME: </strong>{{ user.username }}</p>
                     </div>     
                 </div> 
