--- a/app/templates/profile/edit.html
+++ b/app/templates/profile/edit.html
@@ -112,7 +112,7 @@
                     <div class="col-lg-8">
                         <div class="section-heading center-heading">
                             <span class="subheading">USER DETAILS </span>
-                            <h3>For form validation</h3>
+                            <h3>Form validation</h3>
                             <p>In the Password field, if you <strong><em>do not wish </em></strong> to change your current password. Still input your current password(the one inputed during registration), for form validation.</p>
                         </div>
                          <!-- form -->
