--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -120,7 +120,7 @@
                                     <h1>Armstrong Numbers found:</h1>
                                     <ul>
                                         {% for number in armstrong_numbers %}
-                                            <li>{{ number }}</li>
+                                            <li style="color: white;">{{ number }}</li>
                                         {% endfor %}
                                     </ul>
                                     <br>
