--- a/app/static/app/assets/css/style.css
+++ b/app/static/app/assets/css/style.css
@@ -9,6 +9,7 @@
 body, html {
   width: 100%;
   height: 100%;
+  scroll-behavior: smooth;
 }
 ::-webkit-scrollbar {
   width: 13px;
@@ -188,17 +189,6 @@ BUTTONS STYLE
 .btn-small i {
   margin-right: 5px;
 }
-/* .alert-container {
-  position: fixed;
-  width: 100%;  
-  top: 80px;
-  right: 50px;
-  z-index: 9999;
-  max-width: 400px;
-}
-.alert-container > .alert {
-  width: 100% !important;
-} */
 .alert {
   --at-alert-bg: transparent;
   --at-alert-padding-x: 1.25rem;
